# z99natza-api

./: .env.example  .gitignore  Cargo.toml
me/flow/waifu/: design.txt
src/: lib.rs  main.rs
src/ai/: mod.rs
src/ai/chat/: mod.rs
src/ai/openai/: chat.rs  config.rs  mod.rs
src/ai/openai/chat/: core.rs  mod.rs
src/ai/openai/config/: mod.rs
src/ai/provider/: ai_type.rs  mod.rs
src/ai/utils/: mod.rs  system_prompt.rs
src/app/: bootstrap.rs  error.rs  mod.rs  result.rs  state.rs
src/chat/: mod.rs
src/chat/ai/: ai_manager.rs  chat.rs  chat_ai.rs  chat_ai_impl.rs  manager.rs  mod.rs
src/chat/ai/client/: ai_client.rs  mod.rs  openai.rs
src/chat/ai/port/: mod.rs
src/chat/domain/: chat.rs
src/chat/prompt/: context_builder.rs  system_prompt.rs
src/chat/repository/: chat_repo.rs  json_file_repo.rs  mod.rs
src/chat/transport/http/: controller.rs  mod.rs  response.rs
src/chat/usecase/: handle_chat.rs
src/chat/usecase/dto/: chat_message.rs  chat_request.rs
src/handle/ai/: chat.rs  mod.rs
src/handle/ai/chat/: dto.rs  (+1 more)
src/http/: mod.rs  server.rs
src/http/request/: full_body.rs  json.rs  mod.rs
src/http/response/: mod.rs  to_response.rs
src/http/server/: mod.rs
src/infra/: mod.rs
src/infra/ai/: chat_ai_impl.rs  manager.rs  mod.rs  openai.rs
src/infra/http/: cors.rs  mod.rs  request.rs  server.rs
src/modules/ai_chat/: bootstrap.rs  builder.rs  mod.rs
src/modules/chat/: mod.rs
src/routes/: mod.rs
src/routes/api/: mod.rs
src/routes/debug/: mod.rs  route.rs
src/server/: mod.rs  server.rs
src/shared/ai/: manager.rs  mod.rs
(+28 files in other folders)
